force-app/main/default/objects/Department__c/fields/ALOS_Ventilated_Patients_Days__c.field-meta.xml
<CustomField>
    <fullName>ALOS_Ventilated_Patients_Days__c</fullName>
    <label>ALOS Ventilated Patients (Days)</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Department__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>11+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>