force-app/main/default/objects/Department__c/fields/AVG_Nurse_Patient_Ratio__c.field-meta.xml
<CustomField>
    <fullName>AVG_Nurse_Patient_Ratio__c</fullName>
    <label>AVG Nurse Patient Ratio</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Department__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>01:01</fullName>
            </value>
            <value>
                <fullName>01:02</fullName>
            </value>
            <value>
                <fullName>01:03</fullName>
            </value>
            <value>
                <fullName>01:04</fullName>
            </value>
            <value>
                <fullName>01:05</fullName>
            </value>
            <value>
                <fullName>01:06</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>