force-app/main/default/objects/Department__c/fields/AVG_of_Patients_on_a_Ventilator__c.field-meta.xml
<CustomField>
    <fullName>AVG_of_Patients_on_a_Ventilator__c</fullName>
    <label>AVG % of Patients on a Ventilator</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Department__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>&lt;70%</fullName>
            </value>
            <value>
                <fullName>70%-75%</fullName>
            </value>
            <value>
                <fullName>76%-80%</fullName>
            </value>
            <value>
                <fullName>81%-85%</fullName>
            </value>
            <value>
                <fullName>86%-90%</fullName>
            </value>
            <value>
                <fullName>91%-95%</fullName>
            </value>
            <value>
                <fullName>96%-100%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>