force-app/main/default/objects/Department__c/fields/Cegedim_Id__c.field-meta.xml
<CustomField>
    <fullName>Cegedim_Id__c</fullName>
    <label>Cegedim Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>