force-app/main/default/objects/Department__c/fields/Country_c__c.field-meta.xml
<CustomField>
    <fullName>Country_c__c</fullName>
    <formula>mid( Cegedim_Id__c ,2,2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country__c</label>
    <type>Text</type>
</CustomField>