force-app/main/default/objects/Department__c/fields/Dedicated_Physiotherapy_Presence__c.field-meta.xml
<CustomField>
    <fullName>Dedicated_Physiotherapy_Presence__c</fullName>
    <label>Dedicated Physiotherapy Presence</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Department__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>