force-app/main/default/objects/Department__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Department</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ICU</fullName>
            </value>
            <value>
                <fullName>Surgical Ward</fullName>
            </value>
            <value>
                <fullName>Medical Ward</fullName>
            </value>
            <value>
                <fullName>Ambulatory</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>