force-app/main/default/objects/Department__c/fields/Department_Classification__c.field-meta.xml
<CustomField>
    <fullName>Department_Classification__c</fullName>
    <label>Department Classification</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Department__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Mixed Medical/Surgical ICU</fullName>
            </value>
            <value>
                <fullName>High Dependency Unit/Step-down/Intermediate Care</fullName>
            </value>
            <value>
                <fullName>Surgical ICU</fullName>
            </value>
            <value>
                <fullName>Medical ICU</fullName>
            </value>
            <value>
                <fullName>Neurology ICU</fullName>
            </value>
            <value>
                <fullName>Neurosurgery ICU</fullName>
            </value>
            <value>
                <fullName>Cardiacsurgery ICU</fullName>
            </value>
            <value>
                <fullName>Burn ICU</fullName>
            </value>
            <value>
                <fullName>Pediatric ICU</fullName>
            </value>
            <value>
                <fullName>MedSurg</fullName>
            </value>
            <value>
                <fullName>Cardiac Surgical</fullName>
            </value>
            <value>
                <fullName>Cardiology</fullName>
            </value>
            <value>
                <fullName>Dialysis</fullName>
            </value>
            <value>
                <fullName>Geriatric Medicine</fullName>
            </value>
            <value>
                <fullName>Gynaecology</fullName>
            </value>
            <value>
                <fullName>Infectious Disease Unit</fullName>
            </value>
            <value>
                <fullName>Paediatrics</fullName>
            </value>
            <value>
                <fullName>Palliative Care Unit</fullName>
            </value>
            <value>
                <fullName>Emergency Dept.</fullName>
            </value>
            <value>
                <fullName>Operating Theatre</fullName>
            </value>
            <value>
                <fullName>Discharge Lounge</fullName>
            </value>
            <value>
                <fullName>Day Surgery</fullName>
            </value>
            <value>
                <fullName>Other (specify)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>