force-app/main/default/objects/Department__c/fields/Early_mobilisation_protocol_used__c.field-meta.xml
<CustomField>
    <fullName>Early_mobilisation_protocol_used__c</fullName>
    <label>Early Mobilisation Protocol Used</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Department__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>