force-app/main/default/objects/Department__c/fields/Facility_Type__c.field-meta.xml
<CustomField>
    <fullName>Facility_Type__c</fullName>
    <label>Facility Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ASL</fullName>
            </value>
            <value>
                <fullName>BE</fullName>
            </value>
            <value>
                <fullName>BIO</fullName>
            </value>
            <value>
                <fullName>BUP</fullName>
            </value>
            <value>
                <fullName>Clinics and Health Care Center</fullName>
            </value>
            <value>
                <fullName>CON</fullName>
            </value>
            <value>
                <fullName>Contractor</fullName>
            </value>
            <value>
                <fullName>COR</fullName>
            </value>
            <value>
                <fullName>Corporate Headquarters</fullName>
            </value>
            <value>
                <fullName>CRP</fullName>
            </value>
            <value>
                <fullName>DE</fullName>
            </value>
            <value>
                <fullName>DESS07</fullName>
            </value>
            <value>
                <fullName>DIS</fullName>
            </value>
            <value>
                <fullName>Distributor</fullName>
            </value>
            <value>
                <fullName>DME</fullName>
            </value>
            <value>
                <fullName>Durable Medical Equipment</fullName>
            </value>
            <value>
                <fullName>EDU</fullName>
            </value>
            <value>
                <fullName>ES</fullName>
            </value>
            <value>
                <fullName>EUROPE LIST</fullName>
            </value>
            <value>
                <fullName>FIN</fullName>
            </value>
            <value>
                <fullName>FR</fullName>
            </value>
            <value>
                <fullName>France</fullName>
            </value>
            <value>
                <fullName>FTO/FTTO</fullName>
            </value>
            <value>
                <fullName>Group Practice</fullName>
            </value>
            <value>
                <fullName>HOS</fullName>
            </value>
            <value>
                <fullName>Hospital</fullName>
            </value>
            <value>
                <fullName>HSP</fullName>
            </value>
            <value>
                <fullName>IND</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>LTA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>