force-app/main/default/objects/Department__c/fields/Medical_Specialty__c.field-meta.xml
<CustomField>
    <fullName>Medical_Specialty__c</fullName>
    <label>Medical Specialty</label>
    <length>128</length>
    <type>Text</type>
</CustomField>