force-app/main/default/objects/Department__c/fields/Nr_of_Operating_Rooms__c.field-meta.xml
<CustomField>
    <fullName>Nr_of_Operating_Rooms__c</fullName>
    <label>Nr. of Operating Rooms</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>