force-app/main/default/objects/Department__c/fields/Other_Department_Type__c.field-meta.xml
<CustomField>
    <fullName>Other_Department_Type__c</fullName>
    <label>Other Department Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>