force-app/main/default/objects/Department__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Analyst</fullName>
            </value>
            <value>
                <fullName>Competitor</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Integrator</fullName>
            </value>
            <value>
                <fullName>Investor</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Press</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Reseller</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Academic</fullName>
            </value>
            <value>
                <fullName>Company</fullName>
            </value>
            <value>
                <fullName>Coordinating Organisations</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Expertise Center</fullName>
            </value>
            <value>
                <fullName>FTO</fullName>
            </value>
            <value>
                <fullName>General Hospital Center</fullName>
            </value>
            <value>
                <fullName>Gov. Mental Health Centre</fullName>
            </value>
            <value>
                <fullName>Head Office Home Care</fullName>
            </value>
            <value>
                <fullName>Health Insurance Company</fullName>
            </value>
            <value>
                <fullName>Home Care</fullName>
            </value>
            <value>
                <fullName>Home of Rest (Elderly People)</fullName>
            </value>
            <value>
                <fullName>Medical Associations</fullName>
            </value>
            <value>
                <fullName>Medical Center</fullName>
            </value>
            <value>
                <fullName>Nursing Home</fullName>
            </value>
            <value>
                <fullName>Other Institution</fullName>
            </value>
            <value>
                <fullName>Patient Associations</fullName>
            </value>
            <value>
                <fullName>Pharmacy</fullName>
            </value>
            <value>
                <fullName>Practice</fullName>
            </value>
            <value>
                <fullName>Private Address</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>