force-app/main/default/objects/Department__c/fields/VAP_Rate__c.field-meta.xml
<CustomField>
    <fullName>VAP_Rate__c</fullName>
    <label>VAP Rate</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Department__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>0%-5%</fullName>
            </value>
            <value>
                <fullName>6%-10%</fullName>
            </value>
            <value>
                <fullName>11%-15%</fullName>
            </value>
            <value>
                <fullName>16%-20%</fullName>
            </value>
            <value>
                <fullName>21%-25%</fullName>
            </value>
            <value>
                <fullName>26%-30%</fullName>
            </value>
            <value>
                <fullName>&gt;30%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>