force-app/main/default/objects/Department__c/fields/Workplace__c.field-meta.xml
<CustomField>
    <fullName>Workplace__c</fullName>
    <label>Workplace</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Departments</relationshipLabel>
    <relationshipName>Departments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>