force-app/main/default/objects/Department__c/recordTypes/INT_Cegedim.recordType-meta.xml
<RecordType>
    <fullName>INT_Cegedim</fullName>
    <active>true</active>
    <description>International Departments</description>
    <label>INT Department</label>
</RecordType>